myteo/test/analyze/type_check/variable_declaration/wildcard.exp
Error: Expected type `Bool` but found `Int`
test/analyze/type_check/variable_declaration/wildcard.myte:6:14
 6 | val _: Bool = 1
   |               ^

Error: Expected type `Unit` but found `(Int, (Bool, String))`
test/analyze/type_check/variable_declaration/wildcard.myte:18:3-9
 18 |   ((x, y): Unit);
    |    ^^^^^^